--- a/crud/articles/templates/articles/new.html
+++ b/crud/articles/templates/articles/new.html
@@ -1,12 +1,12 @@
 <h1> 게시글 생성 - 글쓰기</h1>
  <!--form : 사용자에게 양식을 제공하고 값을 받아서(input name, value)
    서버에 전송(action)하는 역할-->
- <form action="{% url 'articles:create' %}" method="POST">
+<form action="{% url 'articles:create' %}" method="POST">
   {% csrf_token %}
-  <label for="title">제목 : </label>
-  <input type="text", name="title" id="title">
+  {{ article_form.as_p }}
+  <!-- <label for="title">제목 : </label>
+  <input type="text", name="title" id="title" required>
   <label for="conent">내용 : </label>
-  <textarea name="content" id="content" cols="30" rows="10"></textarea>
+  <textarea name="content" id="content" cols="30" rows="10"></textarea> -->
   <input type="submit" value="글쓰기">
-  
- </form>
+</form>
